--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.numbers {
+.digits {
    border: 1px solid black;
    background-color: gray;
    width: 30%;
@@ -6,18 +6,11 @@
    color: honeydew; 
    display: inline-block;
    text-align: center;
+   margin: -2px;
 }
-.numbers:hover {
+.digits:hover {
    background-color: red;
  }
-.operators{
-    border: 1px solid black;
-    background-color: gray;
-    width: 30%;
-    height: 32px;
-    color: honeydew; 
-    display: inline-block;
-}
 #equal{
     border: 1px solid black;
     background-color: orangered;
@@ -32,4 +25,14 @@
 }
 #panel{
     margin-bottom: 5px;
+}
+#clear{
+    border: 1px solid black;
+    background-color: orange;
+    width: 30%;
+    height: 32px;
+    color: honeydew; 
+    display: inline-block;
+    margin: -2px;
+    text-align: center;
 }
