--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+body{
+    padding: 0px;
+    margin: 0px;
+    background-color: rgb(46, 46, 46);
+}
 header{
     width: 100%;
     background-color: orchid;
-    height: 48px;
+    height: 56px;
     text-align: center;
     font-family: 'Comforter Brush', cursive;
     font-size: 40px;
@@ -9,12 +14,13 @@ header{
 .digits {
    border: 1px solid black;
    background-color: gray;
-   width: 30%;
+   width: 33%;
    height: 32px;
    color: honeydew; 
    display: inline-block;
    text-align: center;
    margin: -2px;
+   font-size: x-large;
 }
 .digits:hover {
    background-color: red;
@@ -22,39 +28,40 @@ header{
 #equal{
     border: 1px solid black;
     background-color: orangered;
-    width: 30%;
+    width: 102%;
     height: 32px;
-    color: honeydew; 
+    color: honeydew;
     display: inline-block;
+    margin-left: -2px;
+}
+#equal:hover{
+    background-color: transparent;
 }
 #calculator {
     width: 200px;
-    border: 2px solid red;
     display: block;
     margin: 15% auto;
-    
 }
 #panel{
     margin-bottom: 0px;
+    height: 32px;
+    width: 97%;
 }
 #clear{
     border: 1px solid black;
     background-color: orange;
-    width: 30%;
+    width: 33%;
     height: 32px;
     color: honeydew; 
     display: inline-block;
     margin: -2px;
     text-align: center;
+    font-size: x-large;
 }
 #clear:hover{
     background-color: orangered;
 }
-footer{
-    text-align: center;
-    background-color: palegreen;
-    height: 48px;
-    width: 100%;
-    font-family: 'Open Sans', serif;
+#historia{
+    color: wheat;
     font-size: 18px;
 }
